maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: not found: value random3
    random3()
    ^Escaper:9: error: not found: value random3
    		if(random3() == 0)
                   ^Escaper:13: error: not found: value random3
    		if(random3() == 1)
                   ^Escaper:17: error: not found: value random3
    		if(random3() == 2 & !estFaceMur)
                   ^